--- a/style.css
+++ b/style.css
@@ -3,17 +3,23 @@ html, body {
 }
 
 .shaper {
-  background: gray url("./cover.jpeg") repeat 0 0;
+  background: gray url("./the-perfect-answer-ep-cover.jpeg") repeat 0 0;
   background-size: 30%;
   width: 100%;
   margin: 0;
   text-align: center;
   height: 100%;
   min-height: 100vh;
-  padding-top: 120px;
+  /* padding-top: 120px; */
   box-sizing: border-box;
   -webkit-animation: slide 20s linear infinite;
   animation: slide 20s linear infinite;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  /* padding-top: 20px; */
 }
 
 .shaper::before {
@@ -24,10 +30,18 @@ html, body {
   font-family: sans-serif;
   font-size: 120px;
   color: white;
+  margin-top: 80px;
+}
+
+#logo {
+    width: 100%;
+    height: 100%;
+    margin-top: 10px;
+    margin-bottom: 80px;
 }
 
 .shaper p {
-    padding-top: 60px;
+    /* padding-top: 60px; */
 }
 
 .shaper p a {
@@ -42,9 +56,10 @@ html, body {
 }
 
 #speaker {
-    padding-top: 80px;
+    /* padding-top: 20px; */
 	height: 300px;
 	width: 300px;
+    margin-top: -20px;
 	position: relative;
 	overflow: hidden;
 	display: inline-block;
@@ -66,7 +81,7 @@ html, body {
 }
 
 .mute {
-    filter: brightness(0) invert(70%) !important;
+    filter: brightness(0) invert(80%) !important;
 }
 
 body {
@@ -80,4 +95,70 @@ h3 {
     margin-top: -15px;
     padding-bottom: 20px;
     font-style: italic;
+}
+
+#content {
+    width: 80vh;
+    background-color: rgb(245, 245, 220, 0.2);
+    display: block;
+    margin-top: 50px;
+    /* padding-top: 20px; */
+    margin-bottom: 50px;
+    /* padding-bottom: 20px; */
+    backdrop-filter: blur(15px);
+    max-width: 80vw;
+    font-weight: bold;
+}
+
+#insta a {
+    color: rgb(255,194,95);
+}
+
+#spotify a {
+    color: rgb(123,192,106);
+}
+
+#apple a {
+    color: rgb(255, 62, 173);
+}
+
+#youtube a {
+    color: rgb(242,54,71);
+}
+
+#bandcamp a {
+    color: rgb(3,0,155);
+}
+
+#etc a {
+    color: rgb(219,155,215);
+}
+
+#bio {
+    padding-top: 150px;
+    /* margin-top: 500px; */
+    color: white;
+    margin-bottom: -10px;
+}
+
+#bio-container {
+    display: block;
+    width: 100%;
+    /* background: red; */
+    display: flex;
+    justify-content: center;
+    vertical-align: center;
+    align-items: center;
+    margin-bottom: 60px;
+    margin-top: -40px;
+}
+
+#biography {
+    color:#333;
+    width: 80%;
+    text-align: left;
+    text-wrap: initial;
+    font-family: "Helvetica", Arial, sans-serif;
+    font-size: 30px;
+    font-weight: bold;
 }
