--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
+/* background */
 html, body {
   margin: 0; padding: 0;
 }
 
-.shaper {
+.background {
   background: gray url("./the-perfect-answer-ep-cover.jpeg") repeat 0 0;
   background-size: 30%;
   width: 100%;
@@ -10,7 +11,6 @@ html, body {
   text-align: center;
   height: 100%;
   min-height: 100vh;
-  /* padding-top: 120px; */
   box-sizing: border-box;
   -webkit-animation: slide 20s linear infinite;
   animation: slide 20s linear infinite;
@@ -19,69 +19,35 @@ html, body {
   justify-content: center;
   margin-top: 20px;
   margin-bottom: 20px;
-  /* padding-top: 20px; */
 }
 
-.shaper::before {
+.background::before {
     transform: rotate(30deg);
 }
 
-.shaper h1 {
+.background h1 {
   font-family: sans-serif;
   font-size: 120px;
   color: white;
   margin-top: 80px;
 }
 
-#logo {
-    width: 100%;
-    height: 100%;
-    margin-top: 10px;
-    margin-bottom: 80px;
-}
-
-.shaper p {
-    /* padding-top: 60px; */
-}
-
-.shaper p a {
+.background p a {
   font-family: sans-serif;
   font-size: 70px;
   color: white;
 }
-
 @-webkit-keyframes slide {
     from { background-position: 0 0; }
     to { background-position: -512px -512px; }
 }
 
-#speaker {
-    /* padding-top: 20px; */
-	height: 300px;
-	width: 300px;
-    margin-top: -20px;
-	position: relative;
-	overflow: hidden;
-	display: inline-block;
-    color: white;
-    /* border: 5px solid white; */
-
-    -moz-user-select: -moz-none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    -o-user-select: none;
-    user-select: none;
-
-    filter: brightness(0) invert(100%);
-
-    &:hover {
-        cursor: pointer;
-        /* filter: sepia(0) invert(50%); */
-    }
-}
-
-.mute {
-    filter: brightness(0) invert(80%) !important;
+/* content */
+#logo {
+    width: 100%;
+    height: 100%;
+    margin-top: -5px;
+    margin-bottom: -40px;
 }
 
 body {
@@ -102,12 +68,19 @@ h3 {
     background-color: rgb(245, 245, 220, 0.2);
     display: block;
     margin-top: 50px;
-    /* padding-top: 20px; */
     margin-bottom: 50px;
-    /* padding-bottom: 20px; */
     backdrop-filter: blur(15px);
     max-width: 80vw;
     font-weight: bold;
+}
+
+#intro {
+    margin-bottom: 120px;
+}
+
+#blurb {
+    font-style: italic;
+    font-size: 26px;
 }
 
 #insta a {
@@ -134,31 +107,77 @@ h3 {
     color: rgb(219,155,215);
 }
 
+#otherlinks {
+    padding-top: 80px;
+    margin-bottom: 120px;
+}
+
 #bio {
-    padding-top: 150px;
-    /* margin-top: 500px; */
     color: white;
+}
+
+#speaker {
+    padding: auto;
+	height: 200px;
+	width: 300px;
+    padding: 0;
+    margin: 0;
+    object-fit: scale-down;
+	position: relative;
+	overflow: hidden;
+	display: inline-block;
+    margin-bottom: 20px;
+    color: white;
+
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    filter: brightness(0) invert(100%);
+
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+.mute {
+    filter: brightness(0) invert(80%) !important;
+}
+
+
+/* bio page */
+#biography {
+    display: block;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin-top: -40px; */
+    padding: 0px;
     margin-bottom: -10px;
 }
 
-#bio-container {
-    display: block;
-    width: 100%;
-    /* background: red; */
-    display: flex;
-    justify-content: center;
-    vertical-align: center;
-    align-items: center;
-    margin-bottom: 60px;
-    margin-top: -40px;
+#biography-container {
+    width: 85%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 
-#biography {
+#biography-text {
     color:#333;
-    width: 80%;
+    width: 100%;
     text-align: left;
     text-wrap: initial;
     font-family: "Helvetica", Arial, sans-serif;
-    font-size: 30px;
+    font-size: 26px;
     font-weight: bold;
+}
+
+#home {
+    /* padding-top: 100px; */
+    color: white;
+    margin-bottom: 160px;
 }
